# rollnw-py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conftest.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
cmake/: Cache.cmake
docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt
docs/fake/rollnw/: __init__.py  kernel.py  model.py
src/: CMakeLists.txt  opaque_types.cpp  opaque_types.hpp  wrapper.cpp  wrapper_core_scriptapi.cpp  wrapper_formats.cpp  wrapper_i18n.cpp  wrapper_kernel.cpp  wrapper_model.cpp  wrapper_nwn1.cpp  wrapper_objects.cpp  wrapper_objects_components.cpp  wrapper_resources.cpp  wrapper_rules.cpp  wrapper_script.cpp  wrapper_util.cpp
src/glm/: wrap_vmath.cpp
src/json/: nanobind_json.hpp
src/rollnw/: __init__.pyi  kernel.py  kernel.pyi  model.py  model.pyi  nwn1.py  script.py
tests/: test_creature.py  test_dialog.py  test_door.py  test_encounter.py  test_item.py  test_kernel.py  test_model.py  test_palette.py  test_placeable.py  test_player.py  test_plt.py  test_resources.py  test_script.py  test_sound.py  test_store.py  test_tlk.py  test_trigger.py  test_waypoint.py
tests/test_data/user/development/: T_Door21.mdl  c_mindflayer.mdl  c_satyr.mdl  ctl_treebtn_spel.mdl  feat.2da  fx_lanshard3.mdl  fx_step_stbrdg.mdl  plc_cndl02.mdl  ptm_candle07n.mdl  tbw01_c09_01.mdl  tcm02_f05_06.mdl  tni01_k02_01.mdl  tno01_b90_03.mdl  tno01_v67_01.mdl  tnp_tree_t11.mdl  tsw01_h12_01.mdl  ttf02_c01_15.mdl  ttf02_j09_02.mdl  tts01_h02_03.mdl  vwp_flash_whiblu.mdl  wplss_t_044.mdl
utils/: docker_prepare.sh  stubgen.bat  stubgen.sh
